# holistics-tft

./: .env.example  pyproject.toml
.github/workflows/: ingest.yml
docs/plans/: 2026-02-21-tft-dashboard-design.md  2026-02-21-tft-dashboard-implementation.md
holistics/datasets/: tft_analytics.dataset.aml
holistics/models/: league_entries.model.aml  match_participants.model.aml  matches.model.aml  participant_augments.model.aml  participant_traits.model.aml  participant_units.model.aml  unit_items.model.aml
schema/: migrate.py  tft.dbml
schema/migrations/: 001_initial.sql  002_update_api_v2.sql  003_widen_columns.sql
src/: ingest_leagues.py  ingest_matches.py  main.py  riot_api.py
tests/: test_riot_api.py
